compiler/src/test/resources/diagnostics/contributesrobot/classMustExtendScreenRobot.kt
// RENDER_DIAGNOSTICS_FULL_TEXT
package com.test

import com.squareup.anvil.extension.ContributesRobot

<!CONTRIBUTES_ROBOT_ERROR!>@ContributesRobot(Unit::class)<!>
class Abc
